[gd_scene load_steps=33 format=3 uid="uid://dx1aspm7tr5vk"]

[ext_resource type="Script" path="res://Cenas/gato.gd" id="1_5iqdn"]
[ext_resource type="Texture2D" uid="uid://dihcl7wl5t1so" path="res://Imagens/cat/Slide (1).png" id="1_dpqeu"]
[ext_resource type="Texture2D" uid="uid://d065jge7bwf7n" path="res://Imagens/cat/Idle (1).png" id="1_pfqo0"]
[ext_resource type="Texture2D" uid="uid://b0dkq6e6ipkx0" path="res://Imagens/cat/Slide (2).png" id="2_a7da5"]
[ext_resource type="Texture2D" uid="uid://c3c74gtauw4mw" path="res://Imagens/cat/Idle (2).png" id="2_i4lje"]
[ext_resource type="Texture2D" uid="uid://rqdl8altxyd2" path="res://Imagens/cat/Slide (3).png" id="3_4m50p"]
[ext_resource type="Texture2D" uid="uid://dbhd0ron0j75r" path="res://Imagens/cat/Idle (3).png" id="3_b2kf3"]
[ext_resource type="Texture2D" uid="uid://blw30fxh5hsx3" path="res://Imagens/cat/Idle (4).png" id="4_j7s61"]
[ext_resource type="Texture2D" uid="uid://ccca16wblah7" path="res://Imagens/cat/Slide (4).png" id="4_samy1"]
[ext_resource type="Texture2D" uid="uid://h36osgqdl7ca" path="res://Imagens/cat/Idle (5).png" id="5_avlge"]
[ext_resource type="Texture2D" uid="uid://c68pih5rd1l6y" path="res://Imagens/cat/Slide (5).png" id="5_u3msn"]
[ext_resource type="Texture2D" uid="uid://ei04fl87o118" path="res://Imagens/cat/Slide (6).png" id="6_ay0of"]
[ext_resource type="Texture2D" uid="uid://b24dq85ul2k1g" path="res://Imagens/cat/Idle (6).png" id="6_o6a7y"]
[ext_resource type="Texture2D" uid="uid://c1vdae8ovagnt" path="res://Imagens/cat/Slide (7).png" id="7_e8o6m"]
[ext_resource type="Texture2D" uid="uid://ctfvrtyq6dntl" path="res://Imagens/cat/Slide (8).png" id="8_7d6mw"]
[ext_resource type="Texture2D" uid="uid://bsevsi7tm8fbw" path="res://Imagens/cat/Slide (9).png" id="9_c6mrs"]
[ext_resource type="Texture2D" uid="uid://jx46ebjgecd4" path="res://Imagens/cat/Slide (10).png" id="10_td8e6"]
[ext_resource type="Texture2D" uid="uid://c6grt3pa58g5k" path="res://Imagens/cat/Run (1).png" id="11_eo1bi"]
[ext_resource type="Texture2D" uid="uid://cmgo0smmpxdak" path="res://Imagens/cat/Run (2).png" id="12_w8d58"]
[ext_resource type="Texture2D" uid="uid://ckir78wcp372i" path="res://Imagens/cat/Run (3).png" id="13_onnp3"]
[ext_resource type="Texture2D" uid="uid://chlfyu4eaqvwv" path="res://Imagens/cat/Run (4).png" id="14_5ejsg"]
[ext_resource type="Texture2D" uid="uid://ennuj203wm40" path="res://Imagens/cat/Run (5).png" id="15_16hxy"]
[ext_resource type="Texture2D" uid="uid://4dsi6y7838pr" path="res://Imagens/cat/Run (6).png" id="16_lrjq5"]
[ext_resource type="Texture2D" uid="uid://bx6c3nlx51sjc" path="res://Imagens/cat/Run (7).png" id="17_7l6t1"]
[ext_resource type="Texture2D" uid="uid://ecyvi4jca74a" path="res://Imagens/cat/Run (8).png" id="18_rdvfw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qamxe"]
size = Vector2(146, 443)

[sub_resource type="SpriteFrames" id="SpriteFrames_tugg0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_dpqeu")
}, {
"duration": 1.0,
"texture": ExtResource("2_a7da5")
}, {
"duration": 1.0,
"texture": ExtResource("3_4m50p")
}, {
"duration": 1.0,
"texture": ExtResource("4_samy1")
}, {
"duration": 1.0,
"texture": ExtResource("5_u3msn")
}, {
"duration": 1.0,
"texture": ExtResource("6_ay0of")
}, {
"duration": 1.0,
"texture": ExtResource("7_e8o6m")
}, {
"duration": 1.0,
"texture": ExtResource("8_7d6mw")
}, {
"duration": 1.0,
"texture": ExtResource("9_c6mrs")
}, {
"duration": 1.0,
"texture": ExtResource("10_td8e6")
}],
"loop": true,
"name": &"ataque",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_eo1bi")
}, {
"duration": 1.0,
"texture": ExtResource("12_w8d58")
}, {
"duration": 1.0,
"texture": ExtResource("13_onnp3")
}, {
"duration": 1.0,
"texture": ExtResource("14_5ejsg")
}, {
"duration": 1.0,
"texture": ExtResource("15_16hxy")
}, {
"duration": 1.0,
"texture": ExtResource("16_lrjq5")
}, {
"duration": 1.0,
"texture": ExtResource("17_7l6t1")
}, {
"duration": 1.0,
"texture": ExtResource("18_rdvfw")
}],
"loop": true,
"name": &"correr",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_pfqo0")
}, {
"duration": 1.0,
"texture": ExtResource("2_i4lje")
}, {
"duration": 1.0,
"texture": ExtResource("3_b2kf3")
}, {
"duration": 1.0,
"texture": ExtResource("4_j7s61")
}, {
"duration": 1.0,
"texture": ExtResource("5_avlge")
}, {
"duration": 1.0,
"texture": ExtResource("6_o6a7y")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_grc7q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SAnimGato:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c4r5g"]
_data = {
"RESET": SubResource("Animation_grc7q")
}

[sub_resource type="Animation" id="Animation_jcd00"]
resource_name = "anda_pulo"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SAnimGato:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -20), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xxlwd"]
_data = {
"anda_pulo": SubResource("Animation_jcd00")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5j0ss"]
size = Vector2(241, 68)

[node name="Gato" type="CharacterBody2D"]
script = ExtResource("1_5iqdn")

[node name="ColisaoGato" type="CollisionShape2D" parent="."]
position = Vector2(16, -1.5)
shape = SubResource("RectangleShape2D_qamxe")

[node name="SAnimGato" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_tugg0")
autoplay = "default"
frame_progress = 0.0133197
offset = Vector2(50, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c4r5g"),
"Gato": SubResource("AnimationLibrary_xxlwd")
}

[node name="AreaGato" type="Area2D" parent="."]

[node name="ColisaoAtaqueGato" type="CollisionShape2D" parent="AreaGato"]
position = Vector2(209.5, 183)
shape = SubResource("RectangleShape2D_5j0ss")
disabled = true

[node name="TimerReset" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="TimerReset" to="." method="resetapeloTimer"]
